# clashfun

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  ascii.html  detail.md  install.sh  plan.md
src/: cli.rs  config.rs  game_detect.rs  interactive.rs  main.rs  proxy.rs  subscription.rs  updater.rs
